<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
>
    <PreferenceCategory android:title="@string/app">
        <Preference
            android:key="clear_cache"
            android:summary="@string/set_current_cache"
            android:title="@string/set_clear_cache"/>
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/image_type"
            android:entryValues="@array/image_type_value"
            android:key="random_splash"
            android:summary="@string/set_original_splash"
            android:title="@string/original_splash"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="like_download"
            android:title="@string/set_like_download"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about">
        <SwitchPreference
            android:defaultValue="true"
            android:key="check_version"
            android:title="@string/set_check_version"/>
        <EditTextPreference
            android:key="feedback"
            android:summary="@string/feedback_description"
            android:title="@string/set_feedback"/>
        <Preference
            android:key="about"
            android:summary="@string/copy"
            android:title="@string/deviceid"/>

    </PreferenceCategory>
</PreferenceScreen>