<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:onClick="dismiss">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:clickable="true"
        android:elevation="38dp"
        android:orientation="vertical"
        android:transitionName="@string/transition_morph_view">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="12dp"
            android:src="@drawable/ic_emoticon_smile_grey"/>

        <TextView
            android:id="@+id/dialog_text"
            style="@style/ContentTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:gravity="center"
            android:text="@string/thanks_for_donation"
            android:textSize="18sp"/>
        <Button
            android:id="@+id/positive_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:onClick="ok"
            android:text="@string/donate"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

</FrameLayout>